--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portofolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -12,12 +12,12 @@
 
     <header>
         <nav>
-            <div class="logo">My Portofolio</div>
+            <div class="logo">My Portfolio</div>
             <ul>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Home</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">About</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Projects</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Contact</a></li>
+                <li><a class="dynamic-link" href="./index.html">Home</a></li>
+                <li><a class="dynamic-link" href="./index.html">About</a></li>
+                <li><a class="dynamic-link" href="./index.html">Projects</a></li>
+                <li><a class="dynamic-link" href="./index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+        <p>&copy; 2024 Naufal. All rights reserved.</p>
     </footer>
 
     <script src="./script.js"></script>
