--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portofolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -12,12 +12,12 @@
 
     <header>
         <nav>
-            <div class="logo">My Portofolio</div>
+            <div class="logo">My Portfolio</div>
             <ul>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Home</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">About</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Projects</a></li>
-                <li><a class="dynamic-link" href="./index.html" target="_top">Contact</a></li>
+                <li><a class="dynamic-link" href="./index.html">Home</a></li>
+                <li><a class="dynamic-link" href="./index.html">About</a></li>
+                <li><a class="dynamic-link" href="./index.html">Projects</a></li>
+                <li><a class="dynamic-link" href="./index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -87,7 +87,7 @@
                             </path>
                         </g>
                     </svg> G-Mail: <a
-                        href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=naufal97689@gmail.com"
+                        href="https://accounts.google.com/AccountChooser?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F%3Fview%3Dcm%26fs%3D1%26to%3Dnaufal97689@gmail.com&service=mail"
                         target="_blank" rel="nofollow noopener" class="dynamic-link">
                         <span>naufal97689@gmail.com</span>
                     </a></li>
@@ -113,9 +113,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+        <p>&copy; 2024 Muhammad Naufal Athifarahman. All rights reserved.</p>
     </footer>
-
     <script src="./script.js"></script>
 </body>
 
