--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </svg> G-Mail: <a
                         href="https://accounts.google.com/AccountChooser?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F%3Fview%3Dcm%26fs%3D1%26to%3Dnaufal97689@gmail.com&service=mail"
                         target="_blank" rel="nofollow noopener" class="dynamic-link">
-                        <span>naufal97689@gmail.co</span>
+                        <span>naufal97689@gmail.com</span>
                     </a></li>
                 <li> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"
                         class="linkedin-icon">
