--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 
         <section id="about" class="about-section">
             <h2>About Me</h2>
-            <p>I am a passionate developer with experience in various technologies, dedicated to building efficient and
-                scalable web applications.</p>
+            <p>Hello! My name is Naufal, and I hail from Bekasi. I am a passionate developer with experience in various
+                technologies, dedicated to building efficient and scalable web applications. In my free time, I enjoy
+                gaming, which fuels my creativity and problem-solving skills. I've also had the pleasure of visiting
+                Tegal, where I stayed at my grandmother's house—an experience that left me with cherished memories. I
+                believe that my diverse interests and experiences shape my approach to development, allowing me to
+                create applications that not only function well but also engage users.</p>
             <ul>
                 <li>Programming Languages: HTML, CSS, JavaScript, Python, C, C#, C++</li>
                 <li>Frameworks: React, Node.js</li>
