--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
     </main>
 
     <footer>
-        <<<<<<< HEAD <p>&copy; 2024 Muhammad Naufal Athifarahman. All rights reserved.</p>
-            =======
-            <p>&copy; 2024 Naufal. All rights reserved.</p>
-            >>>>>>> a656f3e5bbb985d4888f15be133c083e5c2ac6a9
+        <p>&copy; 2024 Muhammad Naufal Athifarahman. All rights reserved.</p>
+        <p>&copy; 2024 Naufal. All rights reserved.</p>
     </footer>
     <script src="./script.js"></script>
 </body>
