--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Welcome to My Portfolio</h1>
                 <p>This is a brief introduction about myself.</p>
             </div>
-            <img src="./image/0bf6d18a770d2d4e0ddc29f38f3cf678.jpg" alt="Profile" class="profile-image">
+            <img src="./image/14img.jpeg" alt="Profile" class="profile-image">
         </section>
 
         <section id="about" class="about-section">
